force-app/main/default/objects/Opportunity/fields/LGS_Campaign_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>LGS_Campaign_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LGS Campaign Start Date</label>
    <type>Date</type>
</CustomField>