force-app/main/default/objects/Opportunity/fields/LGS_PartnerCode__c.field-meta.xml
<CustomField>
    <fullName>LGS_PartnerCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AL Partner Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>