force-app/main/default/objects/Opportunity/fields/RTL_Hub_Name__c.field-meta.xml
<CustomField>
    <fullName>RTL_Hub_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hub Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>