force-app/main/default/objects/Opportunity/fields/RTL_Refer_Date__c.field-meta.xml
<CustomField>
    <fullName>RTL_Refer_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Refer Date</label>
    <type>DateTime</type>
</CustomField>