force-app/main/default/objects/Opportunity/fields/RTL_Request_Hub_Code__c.field-meta.xml
<CustomField>
    <fullName>RTL_Request_Hub_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Request Hub/Zone/Team Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>