force-app/main/default/objects/Opportunity/fields/RTL_W2L_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>RTL_W2L_Campaign_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Campaign Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>