force-app/main/default/objects/Opportunity/fields/RTL_Web_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>RTL_Web_Unique_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Web Unique ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>