force-app/main/default/objects/Opportunity/fields/RTL_Ws_Reason__c.field-meta.xml
<CustomField>
    <fullName>RTL_Ws_Reason__c</fullName>
    <label>Uncontact Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer is not available</fullName>
            </value>
            <value>
                <fullName>Busy line</fullName>
            </value>
            <value>
                <fullName>No answer</fullName>
            </value>
            <value>
                <fullName>Voicemail</fullName>
            </value>
            <value>
                <fullName>Receiver is not prospect</fullName>
            </value>
            <value>
                <fullName>Do not Contact</fullName>
            </value>
            <value>
                <fullName>Failed Prescreening</fullName>
            </value>
            <value>
                <fullName>Wrong number</fullName>
            </value>
            <value>
                <fullName>Wrong customer</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Duplicate Customer</fullName>
            </value>
            <value>
                <fullName>Reach Maximum Call</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Contact number not found</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>