force-app/main/default/objects/Opportunity/recordTypes/Retail_Auto_Loan.recordType-meta.xml
<RecordType>
    <fullName>Retail_Auto_Loan</fullName>
    <active>true</active>
    <businessProcess>Retail Auto Loan</businessProcess>
    <description>โอกาสผลิตภัณฑ์ เช่าซื้อรถยนต์</description>
    <label>Retail Auto Loan</label>
</RecordType>