force-app/main/default/objects/Opportunity/recordTypes/Retail_Auto_Loan_Closed.recordType-meta.xml
<RecordType>
    <fullName>Retail_Auto_Loan_Closed</fullName>
    <active>true</active>
    <businessProcess>Retail Auto Loan Closed</businessProcess>
    <label>Retail Auto Loan Closed</label>
</RecordType>