force-app/main/default/objects/Opportunity/recordTypes/Retail_Bancassurance.recordType-meta.xml
<RecordType>
    <fullName>Retail_Bancassurance</fullName>
    <active>true</active>
    <businessProcess>Retail Bancassurance</businessProcess>
    <description>โอกาสผลิตภัณฑ์ ประกัน</description>
    <label>Retail Bancassurance</label>
</RecordType>