force-app/main/default/objects/Opportunity/recordTypes/Retail_Bancassurance_Closed.recordType-meta.xml
<RecordType>
    <fullName>Retail_Bancassurance_Closed</fullName>
    <active>true</active>
    <businessProcess>Retail Bancassurance</businessProcess>
    <label>Retail Bancassurance Closed</label>
</RecordType>