force-app/main/default/objects/Opportunity/recordTypes/Retail_Card_and_RDC_Closed.recordType-meta.xml
<RecordType>
    <fullName>Retail_Card_and_RDC_Closed</fullName>
    <active>true</active>
    <businessProcess>Retail Cards</businessProcess>
    <label>Retail Card and RDC Closed</label>
</RecordType>