force-app/main/default/objects/Opportunity/recordTypes/Retail_Deposit.recordType-meta.xml
<RecordType>
    <fullName>Retail_Deposit</fullName>
    <active>true</active>
    <businessProcess>Retail Deposits</businessProcess>
    <description>โอกาสผลิตภัณฑ์ เงินฝาก</description>
    <label>Retail Deposit</label>
</RecordType>