force-app/main/default/objects/Opportunity/recordTypes/Retail_Deposit_Closed.recordType-meta.xml
<RecordType>
    <fullName>Retail_Deposit_Closed</fullName>
    <active>true</active>
    <businessProcess>Retail Deposits</businessProcess>
    <label>Retail Deposit Closed</label>
</RecordType>