force-app/main/default/objects/Opportunity/recordTypes/Retail_Investment.recordType-meta.xml
<RecordType>
    <fullName>Retail_Investment</fullName>
    <active>true</active>
    <businessProcess>Retail Investments</businessProcess>
    <description>โอกาสผลิตภัณฑ์ ลงทุน</description>
    <label>Retail Investment</label>
</RecordType>