force-app/main/default/objects/Opportunity/recordTypes/Retail_Investment_Closed.recordType-meta.xml
<RecordType>
    <fullName>Retail_Investment_Closed</fullName>
    <active>true</active>
    <businessProcess>Retail Investments</businessProcess>
    <label>Retail Investment Closed</label>
</RecordType>