force-app/main/default/objects/Opportunity/recordTypes/Retail_Loans.recordType-meta.xml
<RecordType>
    <fullName>Retail_Loans</fullName>
    <active>true</active>
    <businessProcess>Retail Loans</businessProcess>
    <description>โอกาสผลิตภัณฑ์ สินเชื่อ</description>
    <label>Retail Loans</label>
</RecordType>