force-app/main/default/objects/Opportunity/recordTypes/Retail_Loans_Closed.recordType-meta.xml
<RecordType>
    <fullName>Retail_Loans_Closed</fullName>
    <active>true</active>
    <businessProcess>Retail Loans</businessProcess>
    <label>Retail Loans Closed</label>
</RecordType>