force-app/main/default/objects/Opportunity/recordTypes/Retail_Others.recordType-meta.xml
<RecordType>
    <fullName>Retail_Others</fullName>
    <active>true</active>
    <businessProcess>Retail Others</businessProcess>
    <description>โอกาสผลิตภัณฑ์อื่นๆ เช่น Combo, Up-sell หรือ บริการ e-Statement ฯลฯ</description>
    <label>Retail Others</label>
</RecordType>