force-app/main/default/objects/Opportunity/recordTypes/Retail_Others_Closed.recordType-meta.xml
<RecordType>
    <fullName>Retail_Others_Closed</fullName>
    <active>true</active>
    <businessProcess>Retail Others</businessProcess>
    <label>Retail Others Closed</label>
</RecordType>