force-app/main/default/objects/Opportunity/recordTypes/Retail_Retentions.recordType-meta.xml
<RecordType>
    <fullName>Retail_Retentions</fullName>
    <active>true</active>
    <businessProcess>Retail Loan Retentions</businessProcess>
    <description>โอกาส รักษาลูกค้าสินเชื่อ (Retention)</description>
    <label>Retail Retentions</label>
</RecordType>