force-app/main/default/objects/Opportunity/validationRules/Edit_Lead_Source_Manual_Oppty_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Edit_Lead_Source_Manual_Oppty_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Not(OR($Profile.Name = &quot;TMB System Administrator&quot;, 
$Profile.Name = &quot;Retail Integration API only&quot;, 
$Profile.Name = &quot;App External API&quot;, 
$Profile.Name = &quot;System Administrator&quot;, 
$Profile.Name = &quot;TMB CRM Administrator&quot;))	,
(AND(ISCHANGED(LeadSource) ,
				OR(
								NOT(ISBLANK(RTL_External_Ref_ID__c)),
        NOT(ISBLANK(Campaign.Id)),
								NOT(ISBLANK(Marketing_Code__c)),
        NOT(ISBLANK(RTL_Related_NBO_History__c )),
        NOT(ISBLANK(RTL_Referral__c))
       ),
				  (CONTAINS(RecordType.Name , &quot;Retail&quot;)))))</errorConditionFormula>
    <errorDisplayField>LeadSource</errorDisplayField>
    <errorMessage>ไม่สามารถแก้ไขได้</errorMessage>
</ValidationRule>